--- a/DemoMVC/appsettings.json
+++ b/DemoMVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=App.db; Cache=sharedshared"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
